--- a/book-api/src/main/webapp/src/modules/book/list/book.list.tpl.html
+++ b/book-api/src/main/webapp/src/modules/book/list/book.list.tpl.html
@@ -24,7 +24,7 @@ SOFTWARE.
 <header>
     <toolbar name="model.name" display-name="model.displayName" actions='actions'></toolbar>
 </header>
-<list-records fields="model.fields" records="records" actions="recordActions"></list-records>
+<datatable fields="model.fields" records="records" actions="recordActions"></datatable>
 <pagination ng-if="ctrl.itemsPerPage < ctrl.totalItems"
             total-items="ctrl.totalItems"
             max-size="5"
